# Revelation.Plugin.VulkanRenderer

./: CMakeLists.txt  EventQueue.h  README.md  VulkanAdapter.cpp  VulkanAdapter.h  VulkanRendererInterface.cpp  VulkanRendererInterface.h  VulkanRendererWidget.cpp  VulkanRendererWidget.h  dllmain.cpp  vcpkg.json
Event/: EventQueue.cpp  EventQueue.h  Events.h
Parser/: IParser.h  Parser.cpp  Parser.h  ParserManager.cpp  ParserManager.h  WavefrontObjParser.cpp  WavefrontObjParser.h
assets/: shader.slang
resources/shader/: line_shader.slang  mesh_shader.slang  point_shader.slang  skybox_shader.slang
resources/skybox/: source.json
